Changed VSCode auto formatting

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,5 +6,6 @@
             "type": "vstuc",
             "request": "attach"
         }
-     ]
+     ],
+     "logging": { "engineLogging": true }
 }
