Major Refactoring, Big Speed Upgrade! Nicer code!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,6 @@
         "temp/": true,
         "Temp/": true
     },
+    "debug.focusWindowOnBreak": false,
     "dotnet.defaultSolution": "Cayley Graph Creator.sln"
 }
