--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.aab
-*.unitypackage
+# *.unitypackage
 *.app
 
 # Crashlytics generated file
@@ -77,5 +77,5 @@ crashlytics-build.properties
 #IDE settings  / cache
 .idea
 .vsconfig
-*.png
+# *.png
 /dockerContainer
