--- a/.gitignore
+++ b/.gitignore
@@ -87,4 +87,5 @@ crashlytics-build.properties
 *.pdn.meta
 
 # Ignore specific files
-Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
+"Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset"
+
