ADD MONOIDS, add toggle for split slider, etc

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ crashlytics-build.properties
 # Ignore specific files
 "Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset"
 
+CCG_Screenshot.png
