update docker container, GAP URL

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ crashlytics-build.properties
 "Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset"
 
 CCG_Screenshot.png
+CCG_Screenshot.png.meta
+dockerContainer/GAP-Server Files/static
